# Agentic_AI

./: pyproject.toml  requirements.txt
1-BasicChatbot/: 1-basicChatbot.ipynb
basic_chatbot/: basic_chatbot.ipynb  human_in_the_loop.ipynb
debugging/: agent.py  debugging.ipynb
mcp/: client.py  mathserver.py  weather.py
mcp2/: calc.py  client.py  internet.py
multi_agent/: hierarchical.ipynb  multiaiagent.ipynb  superviser.ipynb
